// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createApiWithCss() generates js + style components, strings and arrays 1`] = `
<span>
  <script
    defer={true}
    src="/static/0.js"
    type="text/javascript"
  />
  <script
    defer={true}
    src="/static/main.js"
    type="text/javascript"
  />
</span>
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 2`] = `
<span>
  <link
    href="/static/main.css"
    rel="stylesheet"
  />
  <link
    href="/static/0.css"
    rel="stylesheet"
  />
</span>
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 3`] = `
<span>
  <style>
    /Users/jamesgillmore/App/build/main.css- the css! 
    
    /Users/jamesgillmore/App/build/0.css- the css! 
    
  </style>
</span>
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 4`] = `
"<script type='text/javascript' src='/static/0.js' defer='defer'></script>
<script type='text/javascript' src='/static/main.js' defer='defer'></script>"
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 5`] = `
"<link rel='stylesheet' href='/static/main.css' />
<link rel='stylesheet' href='/static/0.css' />"
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 6`] = `
"<style>/Users/jamesgillmore/App/build/main.css- the css! 

/Users/jamesgillmore/App/build/0.css- the css! 
</style>"
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 7`] = `
Array [
  "0.js",
  "main.js",
]
`;

exports[`createApiWithCss() generates js + style components, strings and arrays 8`] = `
Array [
  "main.css",
  "0.css",
]
`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 1`] = `
<span>
  <script
    defer={true}
    src="/static/main.no_css.js"
    type="text/javascript"
  />
</span>
`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 2`] = `
<span>
  <link
    href="/static/main.css"
    rel="stylesheet"
  />
</span>
`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 3`] = `
<span>
  <style>
    /Users/jamesgillmore/App/build/main.css- the css! 
    
  </style>
</span>
`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 4`] = `"<script type='text/javascript' src='/static/main.no_css.js' defer='defer'></script>"`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 5`] = `"<link rel='stylesheet' href='/static/main.css' />"`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 6`] = `
"<style>/Users/jamesgillmore/App/build/main.css- the css! 
</style>"
`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 7`] = `
Array [
  "main.no_css.js",
]
`;

exports[`createApiWithCss() uses files with extension "no_css.js" if available 8`] = `
Array [
  "main.css",
]
`;

exports[`unit tests createCssHash() 1`] = `
Object {
  "chunk1": "/static/0.css",
  "chunk2": "/static/1.css",
  "main": "/static/main.css",
}
`;

exports[`unit tests stylesAsString() 1`] = `
"/Users/jamesgillmore/App/build/main.css- the css! 

/Users/jamesgillmore/App/build/0.css- the css! 
"
`;
